# django-admin-bootstrapped

./: .gitignore  .travis.yml  README.rst  pyproject.toml
django_admin_bootstrapped/templates/admin/auth/user/: change_password.html
